packages/webassemblyjs/test/fixtures/type-errors/unary-operand-missing-in-block/module.wast
(module 
  (func $type-unary-operand-missing-in-block
    (i32.const 0)
    (block
      (i32.eqz)
      (drop)
    )
  )
)
